# reVReports

./: .buildinfo  CITATION.cff  LICENSE  README.rst  USAGE.md  api.html  environment.yml  genindex.html  glossary.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  documentation_improvement.yaml  feature_request.yaml  installation_issue.yaml
.github/workflows/: ci-python.yml  codecov.yml  codeql.yml  docs.yml  publish_to_pypi.yml  release_drafter.yml
_autosummary/: reVReports.characterizations.html  reVReports.characterizations.recast_categories.html  reVReports.characterizations.unpack_characterizations.html  reVReports.characterizations.validate_characterization_remapper.html  reVReports.cli.html  reVReports.configs.BaseModelStrict.html  reVReports.configs.Config.html  reVReports.configs.MapVar.html  reVReports.configs.Plots.html  reVReports.configs.SupplyCurveScenario.html  reVReports.configs.html  reVReports.data.augment_sc_df.html  reVReports.data.check_files_match.html  reVReports.data.html  reVReports.exceptions.html  reVReports.exceptions.reVReportsError.html  reVReports.exceptions.reVReportsKeyError.html  reVReports.exceptions.reVReportsTypeError.html  reVReports.exceptions.reVReportsValueError.html  reVReports.fonts.html  reVReports.html  reVReports.logs.get_logger.html  reVReports.logs.html  reVReports.maps.AutomaticallyStyledMapGenerator.html  reVReports.maps.BaseMapGenerator.html  reVReports.maps.ManualStyledMapGenerator.html  reVReports.maps.MapData.html  reVReports.maps.configure_map_params.html  reVReports.maps.generate_maps_from_config.html  reVReports.maps.html  reVReports.plots.PlotData.html  reVReports.plots.PlotGenerator.html  reVReports.plots.html  reVReports.plots.make_bar_plot.html  reVReports.utilities.html  reVReports.utilities.maps.YBFixedBounds.html  reVReports.utilities.maps.html  reVReports.utilities.maps.map_geodataframe_column.html  reVReports.utilities.plots.autoscale_x.html  reVReports.utilities.plots.autoscale_y.html  (+6 more)
_cli/: cli.html
_modules/: index.html
_modules/reVReports/: characterizations.html  configs.html  data.html  exceptions.html  logs.html  maps.html  plots.html
_modules/reVReports/utilities/: maps.html  plots.html
_sources/: glossary.rst.txt  index.rst.txt
_sources/_autosummary/: reVReports.characterizations.recast_categories.rst.txt  reVReports.characterizations.rst.txt  reVReports.characterizations.unpack_characterizations.rst.txt  reVReports.characterizations.validate_characterization_remapper.rst.txt  reVReports.cli.rst.txt  reVReports.configs.BaseModelStrict.rst.txt  reVReports.configs.Config.rst.txt  reVReports.configs.MapVar.rst.txt  reVReports.configs.Plots.rst.txt  reVReports.configs.SupplyCurveScenario.rst.txt  reVReports.configs.rst.txt  reVReports.data.augment_sc_df.rst.txt  reVReports.data.check_files_match.rst.txt  reVReports.data.rst.txt  reVReports.exceptions.reVReportsError.rst.txt  reVReports.exceptions.reVReportsKeyError.rst.txt  reVReports.exceptions.reVReportsTypeError.rst.txt  reVReports.exceptions.reVReportsValueError.rst.txt  reVReports.exceptions.rst.txt  reVReports.fonts.rst.txt  reVReports.logs.get_logger.rst.txt  reVReports.logs.rst.txt  reVReports.maps.AutomaticallyStyledMapGenerator.rst.txt  reVReports.maps.BaseMapGenerator.rst.txt  reVReports.maps.ManualStyledMapGenerator.rst.txt  reVReports.maps.MapData.rst.txt  reVReports.maps.configure_map_params.rst.txt  reVReports.maps.generate_maps_from_config.rst.txt  reVReports.maps.rst.txt  reVReports.plots.PlotData.rst.txt  reVReports.plots.PlotGenerator.rst.txt  reVReports.plots.make_bar_plot.rst.txt  reVReports.plots.rst.txt  reVReports.rst.txt  reVReports.utilities.maps.YBFixedBounds.rst.txt  reVReports.utilities.maps.map_geodataframe_column.rst.txt  reVReports.utilities.maps.rst.txt  reVReports.utilities.plots.autoscale_x.rst.txt  reVReports.utilities.plots.autoscale_y.rst.txt  reVReports.utilities.plots.compare_images_approx.rst.txt  (+6 more)
_sources/misc/: installation.rst.txt
dev/: README.html  index.html
docs/: Makefile
docs/source/: api.rst  conf.py
docs/source/_cli/: cli.rst
docs/source/dev/: README.rst
docs/source/examples/: index.rst
docs/source/misc/: INSTALL.rst
examples/: index.html
misc/: INSTALL.html  installation.html
reVReports/: configs.py  data.py  maps.py  plots.py
reVReports/utilities/: maps.py  plots.py
tests/data/: config_wind_bespoke.json  config_wind_bespoke_4_scen_vertical.json
tests/data/maps/inputs/: map-supply-curve-solar.csv
tests/data/outputs/characterizations/: unpacked-supply-curve.csv
tests/data/supply_curves/characterizations/: supply-curve.csv
tests/integration/: test_cli_integration.py
tests/unit/: test_configs.py  test_exceptions.py
