[build-system]
requires = [
  "setuptools >= 80",
  "setuptools_scm[toml] >= 8",
]
build-backend = 'setuptools.build_meta'


[project]
name = "reVReports"
dynamic = ["version"]
description = "For creating standardized graphics to summarize/report outputs from reV supply curves."
readme = "README.rst"
authors = [
  {name = "Michael Gleason", email = "mike.gleason@nrel.gov"},
]
maintainers = [
  {name = "Pavlo Pinchuk", email = "ppinchuk@nrel.gov"},
]
license = "BSD-3-Clause"
keywords = ["reVReports", "NREL", "Supply Curve", "Visualization", "Graphics"]
requires-python = ">= 3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "cartopy>=0.25.0,<0.26",
    "click>=8.3.1,<9",
    "geopandas>=1.1.1,<2",
    "geoplot>=0.5.1,<1",
    "imagehash>=4.3.2,<5",
    "matplotlib>=3.10.8,<4",
    "nrel-gaps>=0.8.11,<0.9",
    "numpy>=2.3.5,<3",
    "pandas>=2.3.3,<3",
    "pydantic>=2.12.4,<3",
    "pyproj>=3.7.2,<4",
    "seaborn>=0.13.2,<0.14",
    "shapely>=2.1.2,<3",
    "tabulate>=0.9.0,<0.10",
    "tqdm>=4.67.1,<5",
]

[project.optional-dependencies]
dev = [
  "jupyter>=1.1.1,<2",
  "pipreqs>=0.4.13,<0.5",
  "ruff>=0.14.14,<0.15",
  "ruff-lsp>=0.0.62,<0.0.63",
]
test = [
  "flaky>=3.8.1,<4",
  "pytest>=9.0.1,<10",
  "pytest-cases>=3.9.1,<4",
  "pytest-cov>=7.0.0,<8",
  "pytest-mock>=3.15.1,<4",
  "pytest-profiling>=1.8.1,<2",
  "pytest-xdist>=3.8.0,<4",
  "snakeviz>=2.2.2,<3",
  "tox>=4.32.0,<5",
]
doc = [
  "ghp-import>=2.1.0,<3",
  "pydata-sphinx-theme>=0.16.1,<0.17",
  "sphinx-click>=6.1.0,<7",
  "sphinx-copybutton>=0.5.2,<0.6",
  "sphinx-tabs>=3.4.1,<4",
  "sphinxcontrib-mermaid>=1.0.0,<2",
]
build = [
  "build>=1.3.0,<2",
  "pkginfo>=1.12.1.2,<2",
  "twine>=6.2.0,<7",
]

[project.scripts]
reVReports = "reVReports.cli:main"

[project.urls]
homepage = "https://github.com/NREL/reVReports"
documentation = "https://nrel.github.io/reVReports/"
repository = "https://github.com/NREL/reVReports"


[tool.setuptools.packages]
find = { include = ["reV*"] }

[tool.setuptools_scm]
fallback_version = "9999"
version_file = "reVReports/_version.py"


[tool.pixi.workspace]
name = "reVReports"
channels = ["conda-forge", "nrel"]
platforms = ["win-64", "osx-arm64", "osx-64", "linux-64", "linux-aarch64"]

[tool.pixi.environments]
default = { features = ["default"], solve-group = "default" }
dev = { features = ["default", "dev", "build", "test", "doc"], solve-group = "dev" }
test = { features = ["default", "test"], solve-group = "dev" }
doc = { features = ["default", "doc"], solve-group = "dev" }
build = { features = ["default", "build"], solve-group = "dev" }

[tool.pixi.tasks]
geo-demo = { cmd = "reVReports maps -c config_geo.json -o ../../", cwd = "tests/data"}

[tool.pixi.feature.dev.tasks]
lint = "ruff check ./reVReports"
format = "ruff format ./reVReports"

[tool.pixi.feature.test.tasks]
tests = "pytest --durations=20 -rapP -vv --cov=reVReports --cov-report=html --cov-branch --cov-report=xml:coverage.xml --cov-fail-under=85 tests/"
tests-u = "pytest --durations=20 -rapP -vv --cov=reVReports --cov-report=html --cov-branch --cov-report=xml:coverage.xml --cov-fail-under=40 tests/unit"
tests-i = "pytest --durations=20 -rapP -vv --cov=reVReports --cov-report=html --cov-branch --cov-report=xml:coverage.xml --cov-fail-under=70 tests/integration"

[tool.pixi.feature.doc.tasks]
python-docs = { cmd = "make clean html", cwd = "docs", env = { SPHINXOPTS = "--fail-on-warning --keep-going --nitpicky" }}

[tool.pixi.feature.build.tasks]
build-wheels = { cmd = "uv build --sdist --wheel --out-dir dist/ ." }
check-wheels = { cmd = ["twine", "check", "dist/*"], depends-on = ["build-wheels"] }
upload-wheels = { cmd = ["twine", "upload", "dist/*"], depends-on = ["check-wheels"] }

[tool.pixi.dependencies]
cartopy = ">=0.25.0,<0.26"
click = ">=8.3.1,<9"
geopandas = ">=1.1.1,<2"
geoplot = ">=0.5.1,<1"
imagehash = ">=4.3.2,<5"
matplotlib = ">=3.10.8,<4"
numpy = ">=2.3.5,<3"
pandas = ">=2.3.3,<3"
pydantic = ">=2.12.4,<3"
pyproj = ">=3.7.2,<4"
seaborn = ">=0.13.2,<0.14"
shapely = ">=2.1.2,<3"
tabulate = ">=0.9.0,<0.10"
tqdm = ">=4.67.1,<5"

[tool.pixi.pypi-dependencies]
reVReports = { path = ".", editable = true }

[tool.pixi.feature.dev.dependencies]
ipykernel = ">=7.1.0,<8"
jupyter = ">=1.1.1,<2"
pipreqs = ">=0.4.13,<0.5"
ruff = ">=0.14.14,<0.15"
ruff-lsp = ">=0.0.62,<0.0.63"

[tool.pixi.feature.test.dependencies]
flaky = ">=3.8.1,<4"
pytest = ">=9.0.1,<10"
pytest-cases = ">=3.9.1,<4"
pytest-cov = ">=7.0.0,<8"
pytest-mock = ">=3.15.1,<4"
pytest-profiling = ">=1.8.1,<2"
pytest-xdist = ">=3.8.0,<4"
snakeviz = ">=2.2.2,<3"
tox = ">=4.32.0,<5"

[tool.pixi.feature.doc.dependencies]
ghp-import = ">=2.1.0,<3"
make = ">=4.4.1,<5"
pydata-sphinx-theme = ">=0.16.1,<0.17"
sphinx-click = ">=6.1.0,<7"
sphinx-copybutton = ">=0.5.2,<0.6"
sphinx-tabs = ">=3.4.1,<4"
sphinxcontrib-mermaid = ">=1.0.0,<2"

[tool.pixi.feature.build.dependencies]
python-build = ">=1.3.0,<2"
pkginfo = ">=1.12.1.2,<2"
twine = ">=6.2.0,<7"
uv = ">=0.9.10,<0.10"


[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
preview = true
select = [
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "ARG", # flake8-unused-arguments
  "BLE", # flake8-blind-except
  "C4", # flake8-comprehensions
  "C90", # mccabe
  "COM", # flake8-commas
  "D", # pydocstyle
  "E", # pycodestyle
  "EM", # flake8-errmsg
  "F", # Pyflakes
  "FURB", # refurb
  "FLY", #  flynt
  "G", # flake8-logging-format
  "I", # isort
  "INP", # flake8-no-pep420
  "ISC", # flake8-implicit-str-concat
  "LOG", # flake8-logging
  "N", # pep8-naming
  "NPY", # numpy-specific
  "PD", # pandas-vet
  "PERF", # Perflint
  "PIE", # flake8-pie
  "PL", # Pylint
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "Q", # flake8-quotes
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # Ruff-specific rules
  "S", # flake8-bandit
  "SLF", # flake8-self
  "SIM", # flake8-simplify
  "TID", # flake8-tidy-imports (absolute imports)
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # Warning
]
ignore = [
  "B028", # no-explicit-stacklevel
  "COM812", # missing-trailing-comma (incompatible with formatter)
  "D105", # undocumented-magic-method
  "D205", # blank-line-after-summary
  "D202", # no-blank-lines-after-function
  "D210", # surrounded-whitespace
  "D400", # first-line-should-end-with-a-period
  "D401", # non-imperative-mood
  "D403", # first-line-capitalized
  "FURB140", # reimplemented-starmap
  "I001", # unsorted-imports
  "PYI024", # collections-named-tuple
  "RUF012", # mutable-class-default
  "RUF031", # incorrectly-parenthesized-tuple-in-subscript
  "RUF067", # non-empty-init-module
  "S101", # assert
  "S324", # hashlib-insecure-hash-function
  "S403", # suspicious-pickle-import
  "TRY003", # raise-vanilla-args
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 72

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
  "F401", # unused-import
]
"tests/**.py" = [
  "ARG001", # unused-function-argument
  "ARG002", # unused-method-argument
  "D101", # undocumented-public-class
  "D102", # undocumented-public-method
  "EM101", # raw-string-in-exception
  "G004", # logging-f-string
  "INP001", # implicit-namespace-package
  "N806", # non-lowercase-variable-in-function
  "PLC2701", # import-private-name
  "PLR0914", # too-many-locals
  "PLR0915", # too-many-statements
  "PLR2004", # magic-value-comparison
  "PLR6301", # no-self-use
  "SLF001", # private-member-access
  "TRY301", # raise-within-try
  "W505", # doc-line-too-long
]

[tool.ruff.lint.pylint]
max-args = 10
max-positional-args = 10


[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
  # Have to re-enable the standard pragma
  "pragma: no cover",

  # Don't complain about missing debug-only code:
  "if self\\.debug",

  # Don't complain about repr methods
  "def __repr__",
  "def _repr_markdown_",

  # Don't complain about data I/O code
  "def load*",
  "def _load*",

  # Don't complain if tests don't hit defensive assertion code:
  "raise AssertionError",
  "raise NotImplementedError",

  # Don't complain if non-runnable code isn't run:
  "if __name__ == .__main__.:",

  # Don't complain about abstract methods, they aren't run:
  "@(abc\\.)?abstractmethod",

  # Don't complain about logging debugging functions
  "def print_logging_info*",
  "def __cls_name",
]

omit = [
  # omit test files
  "tests/*",
  # omit init files
  "__init__.py",
  # omit version file
  "_version.py",
  # omit log file copied over from other repo
  "reVReports/logs.py",
  # omit pixi files
  ".pixi/*",
]


[tool.pytest.ini_options]
addopts = "--disable-warnings"
testpaths = [
  "tests/unit",
  "tests/integration",
]
markers = "skip_ci: marks test as one that should not be run on Github Workflows"
